--- a/SD.Allen.Frontend/v1.0/component/ReviewAndExtractTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/ReviewAndExtractTemplate.html
@@ -1,5 +1,5 @@
 ﻿<div id="sd-section-canvas">
-    <nav id="sd-section-nav" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation" style="margin-top: 82px">
+    <nav id="sd-section-nav" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation" style="margin-top: 52px">
         <a class="navmenu-brand visible-md visible-lg" data-bind="attr:{href:sdContentUrl+'?OpptyID=' + opptyID()}">Solution Design</a>
         <ul class="nav navmenu-nav">
             <li class="active"><a data-bind="attr:{href:'#'+sectionNavigator()[0].sid}">Opportunity Overview</a></li>
@@ -67,7 +67,7 @@
     </nav>
 </div>
 
-<div class="navbar navbar-default navbar-fixed-top panel panel-primary" style="top: 30px">
+<div class="navbar navbar-default navbar-fixed-top panel panel-primary">
     <div class="list-group">
         <div class="list-group-item active row">
             <div class="col-xs-1 col-lg-1">
