--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -1,10 +1,10 @@
-<div class="row" id="sd-section-container" style="background:url('bg_sd.jpg');height:1000px;background-size:100% cover;">
+<div class="row nav" id="sd-section-container" style="background:url('bg_sd.jpg');min-height:768px;background-size:100% cover;">
     <div id="sd-toplink">
         <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
             <h1 style="color:#ffffff;">Solution Design</h1>
         </div>
         <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills top-nav">
                 <li>
                     <a class="active" href="AppHome.aspx">The Solution Source</a>
                 </li>
@@ -25,8 +25,8 @@
                 </li>
             </ul>
         </div>
-        <div class="col-xs-2 col-md-1 col-lg-2 pull-right">
-            <img src="logo.png" />
+        <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
+                <img src="logo.png" height="60" />
         </div>
     </div>
     <div id="sd-section-content">
@@ -46,11 +46,7 @@
                     <ul class="dropdown-menu sd-dropdown-menu">
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0301&OpptyID=' + opptyID()}">Client Overview and Decision Factors</a></li>
                         <li role="separator" class="divider"></li>                        
-                        <li><a>HPE Win Strategy</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030201&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Sales Approach</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030202&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Competitors</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030203&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Message Map/Value Proposition</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030204&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Pricing Approach</a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030201&OpptyID=' + opptyID()}">HPE Win Strategy</a></li>
                     </ul>
                 </div>
             </li>
@@ -60,28 +56,15 @@
                         Solution Overview                        
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a>Scope</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040101&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>All Offerings</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040102&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Key Scope Items </a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040101&OpptyID=' + opptyID()}">Scope</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0402&OpptyID=' + opptyID()}">Current State Architecture</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a>Solution Approach</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040301&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Summary</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040302&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Outsourcing CMO/TMO/FMO</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040303&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>HR Solution</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040304&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>HPE Internal Challenges and Constraints</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040305&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Design Parameters</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040306&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Deployment Strategy</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040307&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Additional Information</a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040301&OpptyID=' + opptyID()}">Solution Approach</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0404&OpptyID=' + opptyID()}">Innovative Aspects of the Solution</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a>Delivery Strategies</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040501&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Delivery Location Targets</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040505&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>In-Scope Services Delivery Responsibility</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040506&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>Client-Retained Services Delivery Responsibility</a></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040503&OpptyID=' + opptyID()}"><i class="glyphicon glyphicon-menu-right"></i>ESM Tooling and Automation Approach</a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040501&OpptyID=' + opptyID()}">Delivery Strategies</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0406&OpptyID=' + opptyID()}">Key Client Constraints</a></li>
                         <li role="separator" class="divider"></li>
