--- a/SD.Allen.Frontend/v1.0/component/Section0201Template.html
+++ b/SD.Allen.Frontend/v1.0/component/Section0201Template.html
@@ -539,10 +539,10 @@
             </tr>
             <tr>
                 <td><b>Opportunity TCV</b></td>
-                <!--<td><sd-component-dollarformatter params="{dollarValue:opptyTcv}"></sd-component-dollarformatter>-->
+                <td><sd-component-dollarformatter params="{dollarValue:opptyTcv}"></sd-component-dollarformatter>
                     </td>
                 <td><b>Opportunity FYR </b></td>
-                <!--<td><sd-component-dollarformatter params="{dollarValue:opptyFyr}"></sd-component-dollarformatter></td>-->
+                <td><sd-component-dollarformatter params="{dollarValue:opptyFyr}"></sd-component-dollarformatter></td>
             </tr>
             <tr>
                 <td><b>Involved GBUs</b></td>
@@ -553,7 +553,7 @@
                             <th>TCV</th>
                             <th>FYR</th>
                         </tr>
-                        <!--<tr>
+                        <tr>
                             <td width="20%">APPS</td>
                             <td width="40%"><sd-component-dollarformatter params="{dollarValue:involvedGbu.apps().tcv}"></sd-component-dollarformatter></td>
                             <td width="40%"><sd-component-dollarformatter params="{dollarValue:involvedGbu.apps().fyr}"></sd-component-dollarformatter></td>
@@ -582,7 +582,7 @@
                             <td>HP Inc.</td>
                             <td><sd-component-dollarformatter params="{dollarValue:involvedGbu.hpi().tcv}"></sd-component-dollarformatter></td></td>
                             <td><sd-component-dollarformatter params="{dollarValue:involvedGbu.hpi().fyr}"></sd-component-dollarformatter></td></td>
-                        </tr>-->
+                        </tr>
                     </table>
                 </td>
             </tr>
