--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -1,4 +1,4 @@
-<div class="row" id="sd-home-container" style="background:url('bg_home.jpg');height:1013px;background-size:100% cover;">
+<div class="row nav" id="sd-home-container" style="background:url('bg_home.jpg') no-repeat center center;min-height:768px;background-size:cover;">
     <div style="height:70px;background:#2AD2C9;">
         <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
             <h1 style="color:#ffffff;">The Solution Source</h1>
@@ -25,8 +25,8 @@
                 </li>
             </ul>
         </div>
-        <div class="col-xs-2 col-md-1 col-lg-2 pull-right">
-            <img src="logo.png" />
+        <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
+                <img src="logo.png" height="60" />
         </div>
     </div>
     <div id="sd-section-content">
@@ -102,5 +102,6 @@
                 </div>
             </li>
         </ul>
+
     </div>
 </div>
