--- a/SD.Allen.Frontend/v1.0/component/QuestionAreaTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/QuestionAreaTemplate.html
@@ -10,11 +10,11 @@
         </blockquote>
     </div>
     <div class="col-lg-12">
-        <div class="sd-mce-container" data-bind="attr:{id: guid + '-container'}"></div>
+        <div class="sd-mce-container" data-bind="attr:{id: guid + '-container'}" style="margin-left:15px;"></div>
     </div>
-    <!-- ko if:isStartEdit() -->
+    <!-- ko if:isStartEdit() || (editTimes() == 0 && content != undefined && content() != "" && content() != "<p></p>") -->
     <div class="col-lg-12 col-md-6 col-xs-6">
-        <div data-bind="attr: {id: guid}, wysiwyg: content, wysiwygConfig: config" class="sd-fake-textarea"></div>
+         <div data-bind="attr: {id: guid}, wysiwyg: content, wysiwygConfig: config" class="sd-fake-textarea" style="margin-left:15px;"></div>
     </div>
     <!-- /ko -->
     <div class="col-lg-12 hidden">
