--- a/SD.Allen.Frontend/v1.0/css/sd-shared.css
+++ b/SD.Allen.Frontend/v1.0/css/sd-shared.css
@@ -12,7 +12,7 @@ you can delete it after you understand how to use shared folder.
 }
 
 .ms-WPBorderBorderOnly {
-    border-width: 0px;
+    border-width: 0;
 }
 
 .container-fluid .row *,
@@ -392,8 +392,8 @@ h1, .h1, h2, .h2, h3, .h3 {
     margin: 0;
     padding-left:10px;
     height: 70px;
-    background-color: #5B4767;
-    /*background-color: rgba(255,141,109,1);*/
+    /*background-color: #5B4767;*/
+    background-color: rgba(255,141,109,1);
 }
 #sd-nav-top {
     margin: 0;
@@ -472,7 +472,7 @@ h1, .h1, h2, .h2, h3, .h3 {
     color: #fff;
 }
 .test-top {
-    z-index:100 !important;
+    z-index:1029 !important;
 }
 .logo{
     padding:5px 0;
