Move the save function to SectionLoader, Something difficult is the eTag. We have to use the unsync method to save one section

--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -1,4 +1,4 @@
-<div class="row nav" id="sd-section-container" style="background:url('bg_sd.jpg');min-height:768px;background-size:100% cover;">
+<div class="row nav navbar-fixed-top" id="sd-section-container" style="background:url('bg_sd.jpg');min-height:768px;background-size:100% cover;">
     <div id="sd-toplink">
         <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
             <h1 style="color:#ffffff;">Solution Design</h1>
@@ -41,40 +41,25 @@
             <li>
                 <div class="section">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">
-                        Business and Solution Context
+                        Client Solution Strategy
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0301&OpptyID=' + opptyID()}">Client Overview and Decision Factors</a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0301&OpptyID=' + opptyID()}">Client and Business Context</a></li>
                         <li role="separator" class="divider"></li>                        
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=030201&OpptyID=' + opptyID()}">HPE Win Strategy</a></li>
+                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040101&OpptyID=' + opptyID()}">Solution Overview</a></li>
                     </ul>
                 </div>
             </li>
             <li>
                 <div class="section">
                     <a class="dropdown-toggle" data-toggle="dropdown">
-                        Solution Overview                        
+                        Offering Design                        
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040101&OpptyID=' + opptyID()}">Scope</a></li>
+                        <li><a>Opportunity-Wide Summaries</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0402&OpptyID=' + opptyID()}">Current State Architecture</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040301&OpptyID=' + opptyID()}">Solution Approach</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0404&OpptyID=' + opptyID()}">Innovative Aspects of the Solution</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040501&OpptyID=' + opptyID()}">Delivery Strategies</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0406&OpptyID=' + opptyID()}">Key Client Constraints</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0407&OpptyID=' + opptyID()}">Summary Costing &amp; FTE Reports-Costing Approach</a></li>
+                        <li><a>Offering Solution Designs and Costing</a></li>
                     </ul>
-                </div>
-            </li>
-            <li>
-                <div class="section">
-                    Offering Design
                 </div>
             </li>
             <li>
@@ -95,6 +80,11 @@
             <li>
                 <div class="section">
                     Reference Documents
+                </div>
+            </li>
+            <li>
+                <div class="section">
+                    Handover to Delivery
                 </div>
             </li>
         </ul>
