--- a/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
@@ -1,68 +1,78 @@
-﻿<sd-toplink-home></sd-toplink-home>
-<div class="list-group">
-    <div class="list-group-item active row">
-        <div class="col-lg-9">
-            <h3>All Open Opportunities</h3>
+﻿<div class="row nav" id="sd-section-container" >
+    <div id="sd-toplink">
+        <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
+            <h1 style="color:#ffffff;">Solution Design</h1>
         </div>
-        <div class="col-lg-3">
-            <div class="btn-group pull-right" role="group">
-                <a class="btn btn-default btn-tip" href="SDSectionLoader.aspx?sid=0201" title="Create a new opportunity">
-                    <img src="img/newOppty32.png" />
-                </a>
-                <a class="btn btn-default btn-tip" href="SDAllOppty.aspx" title="View all open opportunities">
-                    <img src="img/AllOppty32.png" />
-                </a>
-                <a class="btn btn-default btn-tip" href="SDMyOppty.aspx" title="View my opportunities">
-                    <img src="img/myOppty32.png" />
-                </a>
-            </div>
+        <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
+            <ul class="nav nav-pills top-nav">
+                <li>
+                    <a class="active" href="AppHome.aspx">The Solution Source</a>
+                </li>
+                <li>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
+                    <ul class="dropdown-menu sd-dropdown-menu">
+                        <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
+                        <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
+                    <ul class="dropdown-menu sd-dropdown-menu">
+                        <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
+                        <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
+                        <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
+        <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
+            <img src="logo.png" height="60" />
+        </div>
+    
+    <div id="sd-oppty-list" class="panel-primary" style="min-height:600px;min-width:1280px">
+        <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable">
+            <thead>
+                <tr>
+                    <th>Opportunity ID</th>
+                    <th class="text-nowrap">Opportunity Name</th>
+                    <th class="text-nowrap">Client Name</th>
+                    <th class="text-nowrap">Bid Manager</th>
+                    <th class="text-nowrap">Solution Lead</th>
+                    <th class="text-nowrap">Option Available</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach:opptyList">
+                <tr>
+                    <td class="text-nowrap">
+                        <!-- ko if: isMine -->
+                        <a data-bind="attr: {href: $component.urlPrefix+opptyId}, text: opptyId"></a>
+                        <!-- /ko -->
+                        <!-- ko ifnot: isMine -->
+                        <span data-bind="text:opptyId"></span>
+                        <!-- /ko -->
+                    </td>
+                    <td data-bind="text:opptyName"></td>
+                    <td data-bind="text:clientName"></td>
+                    <!-- ko if: contact -->
+                    <td>
+                        <!-- ko if: contact.coreTeam.primary.bidMgr -->
+                        <a data-bind="text:contact.coreTeam.primary.bidMgr.title,attr:{href:'mailto:'+contact.coreTeam.primary.bidMgr.email,title:''+contact.coreTeam.primary.bidMgr.email}"></a>
+                        <!-- /ko -->
+                    </td>
+                    <td>
+                        <!-- ko if: contact.coreTeam.primary.solnLead -->
+                        <a data-bind="text:contact.coreTeam.primary.solnLead.title,attr:{href:'mailto:'+contact.coreTeam.primary.solnLead.email,title:''+contact.coreTeam.primary.solnLead.email}"></a>
+                        <!--/ko-->
+                    </td>
+                    <!--/ko-->
+                    <!-- ko ifnot:contact -->
+                    <td></td>
+                    <td></td>
+                    <!--/ko-->
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
-
-
-<div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:50px; height:100%;min-height:600px;min-width:1280px">
-    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable">
-        <thead>
-            <tr>
-                <th>Opportunity ID</th>
-                <th class="text-nowrap">Opportunity Name</th>
-                <th class="text-nowrap">Client Name</th>
-                <th class="text-nowrap">Bid Manager</th>
-                <th class="text-nowrap">Solution Lead</th>
-                <th class="text-nowrap">Option Available</th>
-            </tr>            
-        </thead>
-        <tbody data-bind="foreach:opptyList">
-            <tr>
-                <td class="text-nowrap">
-                    <!-- ko if: isMine -->
-                    <a data-bind="attr: {href: $component.urlPrefix+opptyId}, text: opptyId"></a>
-                    <!-- /ko -->
-                    <!-- ko ifnot: isMine -->
-                    <span data-bind="text:opptyId"></span>
-                    <!-- /ko -->
-                </td>
-                <td data-bind="text:opptyName"></td>
-                <td data-bind="text:clientName"></td>
-                <!-- ko if: contact -->
-                <td>
-                    <!-- ko if: contact.coreTeam.primary.bidMgr -->
-                    <a data-bind="text:contact.coreTeam.primary.bidMgr.title,attr:{href:'mailto:'+contact.coreTeam.primary.bidMgr.email,title:''+contact.coreTeam.primary.bidMgr.email}"></a>
-                    <!-- /ko -->
-                </td>
-                <td>
-                    <!-- ko if: contact.coreTeam.primary.solnLead -->
-                    <a data-bind="text:contact.coreTeam.primary.solnLead.title,attr:{href:'mailto:'+contact.coreTeam.primary.solnLead.email,title:''+contact.coreTeam.primary.solnLead.email}"></a>
-                    <!--/ko-->
-                </td>
-                <!--/ko-->
-                <!-- ko ifnot:contact -->
-                <td></td>
-                <td></td>
-                <!--/ko-->
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
 </div>
