update the UI  design

--- a/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
@@ -1,38 +1,39 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">All<br>Opportunities</a>
-                </li>
-                <li><a href="#">Opportunity <br>Overview</a>
-                </li>
-                <li><a href="#">Documents &amp;<br>Presentations</a>
-                </li>
-                <li><a href="#">News &amp; <br>Updates</a>
-                </li>
-                <li><a href="#">Contacts</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other Tools <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Global Deal Tracker</a>
-                        </li>
-                        <li><a href="#">Prusuit Master Data</a>
-                        </li>
-                        <li><a href="#">Cost Models / CMTs</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">GO</button>
-            </form>
+<div id="sd-toplink" style="height:79px;">
+    <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
+        <div>
+            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                <h1 style="color:#ffffff;">
+                    Solution Design
+                </h1>
+            </div>
         </div>
-        <!-- /.navbar-collapse -->
+
+        <div>
+            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                <ul class="nav nav-pills top-nav">
+                    <li>
+                        <a class="active" href="AppHome.aspx">The Solution Source</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
+                        <ul class="dropdown-menu sd-dropdown-menu">
+                            <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
+                            <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
+                        <ul class="dropdown-menu sd-dropdown-menu">
+                            <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
+                            <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
+                            <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <!-- /.container-fluid -->
-</nav>
+    <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
+        <img src="logo.png" height="60" />
+    </div>
+</div>
