--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -1,33 +1,48 @@
-<div class="row nav navbar-fixed-top" id="sd-home-container" style="background:url('bg_home.jpg') no-repeat center center;min-height:768px;background-size:cover;">
-    <div style="height:70px;background:#2AD2C9;">
-        <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
-            <h1 style="color:#ffffff;">The Solution Source</h1>
-        </div>
-        <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
-            <ul class="nav nav-pills home-nav">
-                <li>
-                    <a class="active" href="AppHome.aspx">Home</a>
-                </li>
-                <li>
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
-                    <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
-                        <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+<style>
+    body.ms-backgroundImage {
+        background: url('bg_home.jpg') no-repeat center center;
+        min-height: 768px;
+        background-size: cover;
+    }
+</style>
+<div class="row nav navbar-fixed-top" id="sd-home-container" style="min-width:1300px;">
+    <div style="height:79px;background:#2AD2C9;">
+        <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
+            <div>
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                    <h1 style="color:#ffffff;">The Solution Source</h1>
+                </div>
+            </div>
+            <div>
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                    <ul class="nav nav-pills top-nav">
+                        <li>
+                            <a class="active" href="AppHome.aspx">Home</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
+                            <ul class="dropdown-menu sd-dropdown-menu">
+                                <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
+                                <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
+                            <ul class="dropdown-menu sd-dropdown-menu">
+                                <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
+                                <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
+                                <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                </li>
-                <li>
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
-                    <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
-                        <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                        <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
-                    </ul>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
-                <img src="logo.png" height="60" />
+        <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
+            <img src="logo.png" height="60" />
         </div>
+
+
     </div>
     <div id="sd-section-content">
         <ul class="nav nav-pills">
