--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -1,34 +1,12 @@
-<div class="row nav navbar-fixed-top" id="sd-section-container" style="background:url('bg_sd.jpg');min-height:768px;background-size:100% cover;">
-    <div id="sd-toplink">
-        <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
-            <h1 style="color:#ffffff;">Solution Design</h1>
-        </div>
-        <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
-            <ul class="nav nav-pills top-nav">
-                <li>
-                    <a class="active" href="AppHome.aspx">The Solution Source</a>
-                </li>
-                <li>
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
-                    <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
-                        <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
-                    <ul class="dropdown-menu sd-dropdown-menu">
-                        <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
-                        <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                        <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
-                <img src="logo.png" height="60" />
-        </div>
-    </div>
+<style>
+    body.ms-backgroundImage {
+        background: url('bg_sd.jpg');
+        min-height: 768px;
+        background-size: 100% cover;
+    }
+</style>
+<div class="row nav navbar-fixed-top" id="sd-section-container" style="min-width:1300px;">
+    <sd-toplink></sd-toplink>    
     <div id="sd-section-content">
         <ul class="nav nav-pills">
             <li>
@@ -45,7 +23,7 @@
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0301&OpptyID=' + opptyID()}">Client and Business Context</a></li>
-                        <li role="separator" class="divider"></li>                        
+                        <li role="separator" class="divider"></li>
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=040101&OpptyID=' + opptyID()}">Solution Overview</a></li>
                     </ul>
                 </div>
@@ -53,7 +31,7 @@
             <li>
                 <div class="section">
                     <a class="dropdown-toggle" data-toggle="dropdown">
-                        Offering Design                        
+                        Offering Design
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
                         <li><a>Opportunity-Wide Summaries</a></li>
