--- a/SD.Allen.Frontend/v1.0/component/SectionLoaderTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SectionLoaderTemplate.html
@@ -1,38 +1,44 @@
 ﻿<div class="nav navbar-fixed-top">
-    <div id="sd-toplink">
-        <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
-                <h1 style="color:#ffffff;">Solution Design</h1>
+    <div id="sd-toplink" style="height:79px;">
+        <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
+            <div>
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                    <h1 style="color:#ffffff;">
+                        Solution Design
+                    </h1>
+                </div>
             </div>
-            <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
-                <ul class="nav nav-pills top-nav">
-                    <li>
-                        <a class="active" href="AppHome.aspx">The Solution Source</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
-                        <ul class="dropdown-menu sd-dropdown-menu">
-                            <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
-                            <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
-                        <ul class="dropdown-menu sd-dropdown-menu">
-                            <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
-                            <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                            <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <div>
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                    <ul class="nav nav-pills top-nav">
+                        <li>
+                            <a class="active" href="AppHome.aspx">The Solution Source</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
+                            <ul class="dropdown-menu sd-dropdown-menu">
+                                <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
+                                <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
+                            <ul class="dropdown-menu sd-dropdown-menu">
+                                <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
+                                <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
+                                <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-xs-2 col-md-1 col-lg-2 pull-right logo">
-                <img src="logo.png" height="60" />
-            </div>
+        </div>
+        <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
+            <img src="logo.png" height="60" />
         </div>
     </div>
 </div>
-<div class="nav navbar-fixed-top test-top" style="margin-top:70px;">
+<div class="nav navbar-fixed-top test-top" style="margin-top:79px;">
     <div id="sd-nav-top">
         <div class="row form-inline ">
             <div class="col-xs-3 col-md-3 sd-auto-width vertical-align-middle">
@@ -95,14 +101,14 @@
         </div>        
     </div>
 </div>
-<div class="nav navbar-fixed-top test-top" style="margin-top:120px;background-color:transparent;">
+<div class="nav navbar-fixed-top test-top" style="margin-top:129px;background-color:transparent;">
     <div class="row form-horizontal">
         <div class="col-lg-12 text-right">
             <div class="sd-update-message" style="height:20px;padding:5px;"></div>
         </div>
     </div>
 </div>
-<nav id="sd-section-nav" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation" style="top: 120px">
+<nav id="sd-section-nav" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation" style="top: 129px">
     <a class="navmenu-brand visible-md visible-lg" data-bind="attr:{href:sdContentUrl+'?OpptyID=' + opptyID()}">Solution Design</a>
     <ul class="nav navmenu-nav">
         <li class="active">
@@ -178,7 +184,7 @@
     </ul>
 </nav>
 
-<div id="sd-section-detail" class="container-fluid sd-section-content" style="margin-left: 0; margin-top:130px; height:100%;min-height:600px;min-width:1280px">
+<div id="sd-section-detail" class="container-fluid sd-section-content" style="margin-left: 0; margin-top:140px; height:100%;min-height:600px;min-width:1280px">
     <!--ko if: sid() === '0201'-->
     <sd-section-0201 params="{viewModel: $component}"></sd-section-0201>
     <!--/ko-->
