--- a/SD.Allen.Frontend/v1.0/css/sd-shared.css
+++ b/SD.Allen.Frontend/v1.0/css/sd-shared.css
@@ -385,7 +385,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 #sd-home-container a {
-    color: #fff;
+    
 }
 
 #sd-toplink {
@@ -479,6 +479,13 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 .top-nav li a {
     color:#fff;
+}
+.top-nav li a:hover {
+    color:#333;
+}
+
+#sd-section-content .nav .open >a, #sd-section-content .nav .open > a:focus, #sd-section-content .nav .open > a:hover{
+    background-color:transparent;
 }
 
 
