--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -21,14 +21,14 @@
                         </li>
                         <li>
                             <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
-                            <ul class="dropdown-menu sd-dropdown-menu">
+                            <ul class="dropdown-menu ss-dropdown-menu">
                                 <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
                                 <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
                             </ul>
                         </li>
                         <li>
                             <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
-                            <ul class="dropdown-menu sd-dropdown-menu">
+                            <ul class="dropdown-menu ss-dropdown-menu">
                                 <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
                                 <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
                                 <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
