--- a/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
@@ -1,30 +1,25 @@
-﻿<sd-toplink-home></sd-toplink-home>
-
-<!--<div class="panel panel-primary">-->
-    <div class="list-group">
-        
-        <div class="list-group-item active row">
-            <div class="col-lg-9">
-                <h3>My Opportunities</h3>
-            </div>
-            <div class="col-lg-3">
-                <div class="btn-group pull-right" role="group">
-                    <a class="btn btn-default btn-tip" href="SDSectionLoader.aspx?sid=0201" title="Create a new opportunity">
-                        <img src="img/newOppty32.png" />
-                    </a>
-                    <a class="btn btn-default btn-tip" href="SDAllOppty.aspx" title="View all open opportunities">
-                        <img src="img/AllOppty32.png" />
-                    </a>
-                    <a class="btn btn-default btn-tip" href="SDMyOppty.aspx" title="View my opportunities">
-                        <img src="img/myOppty32.png" />
-                    </a>
-                </div>
+﻿<style>
+    body.ms-backgroundImage {
+        background: none;
+        min-height: 768px;
+        background-size: 100% cover;
+    }
+</style>
+<div class="row nav navbar-fixed-top" id="sd-section-container" style="min-width:1300px;">
+    <sd-toplink></sd-toplink>
+</div>
+<div class="nav navbar-fixed-top test-top" style="margin-top:79px;">
+    <div id="sd-nav-top">
+        <div class="row form-inline ">
+            <div class="col-xs-12 col-md-12 sd-auto-width vertical-align-middle">
+                <h1 style="color:#ffffff;">
+                    My Opportunities
+                </h1>
             </div>
         </div>
     </div>
-<!--</div>-->
-
-<div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:50px; height:100%;min-height:600px;min-width:1280px">
+</div>
+<div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:129px; height:100%;min-width:1300px">
     <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable">
         <thead>
             <tr>
@@ -32,8 +27,8 @@
                 <th rowspan="2">Opportunity Name</th>
                 <th rowspan="2">Client Name</th>
                 <th rowspan="2">Deal Status</th>
-                <th rowspan="2" align="center">Sales Stage</th>                
-                <th rowspan="1" colspan="3" align="center">Status Check</th>                
+                <th rowspan="2" align="center">Sales Stage</th>
+                <th rowspan="1" colspan="3" align="center">Status Check</th>
                 <th rowspan="2" align="center">Option</th>
             </tr>
             <tr>
@@ -57,4 +52,5 @@
         </tbody>
     </table>
 </div>
+
 
