generate the top with an component. And Add information with the oppty in SectionLoader page

--- a/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
@@ -12,9 +12,9 @@
     <div id="sd-nav-top">
         <div class="row form-inline ">
             <div class="col-xs-12 col-md-12 sd-auto-width vertical-align-middle">
-                <h1 style="color:#ffffff;">
-                    All open Opportunities
-                </h1>
+                <h2 style="color:#ffffff;">
+                    All Opportunities
+                </h2>
             </div>
         </div>
     </div>
