--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -6,18 +6,21 @@
     }
 </style>
 <div class="row nav navbar-fixed-top" id="sd-home-container" style="min-width:1300px;">
-    <div style="height:79px;background:#2AD2C9;">
+    <div id="sd-toplink" style="height:79px;background-color:#2ad2c9;">
         <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
-            <div>
-                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
-                    <h1 style="color:#ffffff;">The Solution Source</h1>
+            <div class="row">
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 15px;">
+                    <h1 style="color:#ffffff;">
+                        The Solution Source
+                    </h1>
                 </div>
             </div>
+
             <div>
-                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0;">
                     <ul class="nav nav-pills top-nav">
                         <li>
-                            <a class="active" href="AppHome.aspx">Home</a>
+                            <a class="active" href="Home.aspx">Home</a>
                         </li>
                         <li>
                             <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
@@ -41,8 +44,6 @@
         <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
             <img src="logo.png" height="60" />
         </div>
-
-
     </div>
     <div id="sd-section-content">
         <ul class="nav nav-pills">
@@ -51,7 +52,7 @@
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution Design</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="SDMyOppty.aspx" target="_blank">My Opportunities</a></li>
-                        <li><a href="SDAllOppty.aspx" target="_blank">All Open Opportunities</a></li>
+                        <li><a href="SDAllOppty.aspx" target="_blank">All Opportunities</a></li>
                     </ul>
                 </div>
             </li>
