--- a/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
@@ -1,7 +1,7 @@
 <div id="sd-toplink" style="height:79px;">
     <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
-        <div>
-            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 15px;">
                 <h1 style="color:#ffffff;">
                     Solution Design
                 </h1>
@@ -9,10 +9,10 @@
         </div>
 
         <div>
-            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
+            <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0;">
                 <ul class="nav nav-pills top-nav">
                     <li>
-                        <a class="active" href="AppHome.aspx">The Solution Source</a>
+                        <a class="active" href="Home.aspx">The Solution Source</a>
                     </li>
                     <li>
                         <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
