--- a/SD.Allen.Frontend/v1.0/component/SectionLoaderTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SectionLoaderTemplate.html
@@ -1,47 +1,10 @@
-﻿<div class="nav navbar-fixed-top">
-    <div id="sd-toplink" style="height:79px;">
-        <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
-            <div>
-                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
-                    <h1 style="color:#ffffff;">
-                        Solution Design
-                    </h1>
-                </div>
-            </div>
-            <div>
-                <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 10px;">
-                    <ul class="nav nav-pills top-nav">
-                        <li>
-                            <a class="active" href="AppHome.aspx">The Solution Source</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
-                            <ul class="dropdown-menu sd-dropdown-menu">
-                                <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
-                                <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
-                            <ul class="dropdown-menu sd-dropdown-menu">
-                                <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
-                                <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                                <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
-            <img src="logo.png" height="60" />
-        </div>
-    </div>
+﻿<div class="nav navbar-fixed-top" style="min-width:1300px;">
+    <sd-toplink></sd-toplink>
 </div>
-<div class="nav navbar-fixed-top test-top" style="margin-top:79px;">
+<div class="nav navbar-fixed-top test-top" style="margin-top:79px;min-width:1300px;">
     <div id="sd-nav-top">
         <div class="row form-inline ">
-            <div class="col-xs-3 col-md-3 sd-auto-width vertical-align-middle">
+            <div class="col-lg-3 sd-auto-width">
                 <a id="sd-section-navbtn" class="btn" data-toggle="offcanvas" data-target="#sd-section-nav" data-
                    canvas="#sd-section-canvas" data-placement="left" href="#" title="Navigate between each sections">
                     <img src="img/Browse32.png" />
@@ -72,10 +35,15 @@
                     <!--/ko-->
                 </span>
             </div>
-            <div class="col-xs-6 col-md-6 vertical-align-middle center">
-                <h3 data-bind="text: title" style="color:#fff;"></h3>
+            <div class="col-lg-6 sd-auto-width" style="min-width:800px;color:#fff;">
+                <!--ko with:oppty-->
+                <small data-bind="text:$component.opptyID"></small> |
+                Opportunity Name: <small data-bind="text:OpptyName"></small> |
+                Client Name: <small data-bind="text:ClientName"></small>
+                <!--/ko-->
+                <h4 data-bind="text: title" style="color:#fff;"></h4>
             </div>
-            <div class="col-lg-2 pull-right sd-auto-width">                
+            <div class="col-lg-2 pull-right sd-auto-width">
                 <!--ko if: opptyID() != ""-->
                 <span style="">
                     <a class="btn" target="_blank" title="Review and Extract" data-bind="attr:{href:'SDReviewAndExtract.aspx?OpptyID='+opptyID()}" style="margin-right: 5px;">
@@ -84,7 +52,7 @@
                 </span>
                 <!--ko if: sid() === '0201'-->
                 <span style="">
-                    <a class="btn" title="Pursuit Team Contacts" href="#" data-bind="click: changeSection.bind($data, '0202')"  style="margin-right: 5px;">
+                    <a class="btn" title="Pursuit Team Contacts" href="#" data-bind="click: changeSection.bind($data, '0202')" style="margin-right: 5px;">
                         <img src="img/opptyContact32.png" />
                     </a>
                 </span>
@@ -98,7 +66,7 @@
                 </span>
                 <!-- /ko -->
             </div>
-        </div>        
+        </div>
     </div>
 </div>
 <div class="nav navbar-fixed-top test-top" style="margin-top:129px;background-color:transparent;">
