Change table default style

--- a/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
@@ -20,9 +20,9 @@
     </div>
 </div>
 <div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:129px; height:100%;min-width:1300px">
-    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable">
+    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable sd-table">
         <thead>
-            <tr>
+            <tr style="background-color:rgb(91, 71, 103);color:#fff;">
                 <th rowspan="2">Opportunity ID</th>
                 <th rowspan="2">Opportunity Name</th>
                 <th rowspan="2">Client Name</th>
