--- a/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:129px; height:100%;min-width:1300px">
-    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable">
+    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable sd-table">
         <thead>
             <tr>
                 <th>Opportunity ID</th>
