All the UI Design

--- a/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/MyOpptyTemplate.html
@@ -20,15 +20,15 @@
     </div>
 </div>
 <div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:129px; height:100%;min-width:1300px">
-    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable sd-table">
+    <table id="table_sorting_paging" class="table-striped table-hover table-condensed dataTable sd-table">
         <thead>
-            <tr style="background-color:rgb(91, 71, 103);color:#fff;">
-                <th rowspan="2">Opportunity ID</th>
+            <tr>
+                <th rowspan="2" height="35">Opportunity ID</th>
                 <th rowspan="2">Opportunity Name</th>
                 <th rowspan="2">Client Name</th>
                 <th rowspan="2">Deal Status</th>
                 <th rowspan="2" align="center">Sales Stage</th>
-                <th rowspan="1" colspan="3" align="center">Status Check</th>
+                <th rowspan="1" colspan="3" class="text-center">Status Check</th>
                 <th rowspan="2" align="center">Option</th>
             </tr>
             <tr>
