--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -1,6 +1,6 @@
 <style>
     body.ms-backgroundImage {
-        background: url('bg_sd.jpg');
+        background: url('img/bg_sd.jpg');
         min-height: 768px;
         background-size: 100% cover;
     }
@@ -19,7 +19,7 @@
             <li>
                 <div class="section">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">
-                        Client Solution Strategy
+                        Client<br /> Solution<br /> Strategy
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
                         <li><a data-bind="attr:{href:sdLoaderUrl+'?sid=0301&OpptyID=' + opptyID()}">Client and Business Context</a></li>
@@ -31,7 +31,7 @@
             <li>
                 <div class="section">
                     <a class="dropdown-toggle" data-toggle="dropdown">
-                        Offering Design
+                        Offering<br /> Design
                     </a>
                     <ul class="dropdown-menu sd-dropdown-menu">
                         <li><a>Opportunity-Wide Summaries</a></li>
@@ -42,27 +42,27 @@
             </li>
             <li>
                 <div class="section">
-                    Integrated Technical Architecture
+                    Integrated<br /> Technical<br /> Architecture
                 </div>
             </li>
             <li>
                 <div class="section">
-                    End-to-End<br /> T&T<br /> Solution
+                    End-to-End<br /> T&T Solution
                 </div>
             </li>
             <li>
                 <div class="section">
-                    Critical Risks, Assumptions and Mitigations
+                    Critical<br /> Risks,<br /> Assumptions<br /> and<br /> Mitigations
                 </div>
             </li>
             <li>
                 <div class="section">
-                    Reference Documents
+                    Required<br /> Documents
                 </div>
             </li>
             <li>
                 <div class="section">
-                    Handover to Delivery
+                    Handover to<br /> Delivery
                 </div>
             </li>
         </ul>
