--- a/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AllOpptyTemplate.html
@@ -20,10 +20,10 @@
     </div>
 </div>
 <div id="sd-oppty-list" class="panel-primary" style="margin-left:0; margin-top:129px; height:100%;min-width:1300px">
-    <table id="table_sorting_paging" class="table-bordered table-striped table-hover table-condensed dataTable sd-table">
+    <table id="table_sorting_paging" class="table-striped table-hover table-condensed dataTable sd-table">
         <thead>
             <tr>
-                <th>Opportunity ID</th>
+                <th height="35">Opportunity ID</th>
                 <th class="text-nowrap">Opportunity Name</th>
                 <th class="text-nowrap">Client Name</th>
                 <th class="text-nowrap">Bid Manager</th>
