--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -1,6 +1,6 @@
 <style>
     body.ms-backgroundImage {
-        background: url('bg_home.jpg') no-repeat center center;
+        background: url('img/bg_home.jpg') no-repeat center center;
         min-height: 768px;
         background-size: cover;
     }
@@ -10,7 +10,7 @@
         <div class="col-xs-10 col-md-10 col-lg-10 sd-auto-width">
             <div class="row">
                 <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0 15px;">
-                    <h1 style="color:#ffffff;">
+                    <h1 style="color:#000;">
                         The Solution Source
                     </h1>
                 </div>
@@ -18,7 +18,7 @@
 
             <div>
                 <div class="col-xs-12 col-md-12 col-lg-12 sd-auto-width" style="padding:0;">
-                    <ul class="nav nav-pills top-nav">
+                    <ul class="nav nav-pills top-nav-home">
                         <li>
                             <a class="active" href="Home.aspx">Home</a>
                         </li>
@@ -26,7 +26,8 @@
                             <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
                             <ul class="dropdown-menu ss-dropdown-menu">
                                 <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
-                                <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                                <li><a href="Support Contacts.aspx" target="_blank">Support Contacts</a></li>
+                                <li><a href="#" target="_blank">Report</a></li>
                             </ul>
                         </li>
                         <li>
@@ -42,14 +43,14 @@
             </div>
         </div>
         <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
-            <img src="logo.png" height="60" />
+            <img src="img/logo_ss.png" height="60" />
         </div>
     </div>
     <div id="sd-section-content">
         <ul class="nav nav-pills">
             <li>
                 <div class="outlink">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution Design</a>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution<br />Design</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="SDMyOppty.aspx" target="_blank">My Opportunities</a></li>
                         <li><a href="SDAllOppty.aspx" target="_blank">All Opportunities</a></li>
@@ -58,7 +59,7 @@
             </li>
             <li>
                 <div class="outlink">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Configuration&amp; Costing</a>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Configuration&nbsp;&amp;<br />Costing</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="http://c9w19663.itcs.hpecorp.net/PMD/" target="_blank">PMD</a></li>
                         <li><a href="http://prime21.sharepoint.hp.com/teams/Apps%20Solutioning/Tools/SDT/SitePages/Home.aspx" target="_blank">SDT-Estimation, Configuration</a></li>
@@ -77,6 +78,16 @@
             </li>
             <li>
                 <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">
+                        Solution<br />Guides,<br />SOW<br />Templates
+                    </a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="https://www.soda.svcs.hpe.com/soto/web/landingpage" target="_blank">SODA</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Review &amp; Approvals</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="https://ent301.sharepoint.hp.com/teams/GlobalDealTracker/SitePages/Home.aspx" target="_blank">GDT</a></li>
@@ -85,7 +96,7 @@
             </li>
             <li>
                 <div class="outlink">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pursuit Workflow</a>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pursuit<br /> Workflow</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=PEP" target="_blank">PEP</a></li>
                     </ul>
@@ -105,15 +116,6 @@
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Knowledge Management</a>
                     <ul class="dropdown-menu ss-dropdown-menu">
                         <li><a href="https://grspro.itcs.hp.com/ius/" target="_blank">GRS</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <div class="outlink">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Metrics &amp; Reporting</a>
-                    <ul class="dropdown-menu ss-dropdown-menu">
-                        <li><a href="https://www.soda.svcs.hpe.com/soto/web/landingpage" target="_blank">SODA</a></li>
-                        <li><a href="javascript:void(0);" style="color:gray;">Solution Design</a></li>
                     </ul>
                 </div>
             </li>
