--- a/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/TopLinkTemplate.html
@@ -19,6 +19,7 @@
                         <ul class="dropdown-menu sd-dropdown-menu">
                             <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
                             <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                            <li><a href="#" target="_blank">Report</a></li>
                         </ul>
                     </li>
                     <li>
@@ -26,7 +27,7 @@
                         <ul class="dropdown-menu sd-dropdown-menu">
                             <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
                             <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                            <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                            <li><a href="SDAllOppty.aspx" target="_blank">All opportunities</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -34,6 +35,6 @@
         </div>
     </div>
     <div class="col-xs-2 col-md-2 col-lg-2 pull-right" style="padding:10px 0">
-        <img src="logo.png" height="60" />
+        <img src="img/logo_sd.png" height="60" />
     </div>
 </div>
